Corrected spacing in both HTML files, and reorganized css stylesheet for better flow

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #dbbcbc;
+}
+
 h1 {
   color: pink;
   text-align: center;
@@ -50,6 +54,16 @@ li {
   float: left;
 }
 
+img {
+  padding: 2px;
+  border: 1px dotted #273449;
+  background-color: #94d893;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 .center {
   display: block;
   margin-left: auto;
@@ -60,10 +74,6 @@ li {
   background-color: #b8dbdb;
 }
 
-body {
-  background-color: #dbbcbc;
-}
-
 .well {
   margin: 5px;
   border: 10px solid #d62a2a;
@@ -71,16 +81,10 @@ body {
   background-color: #edc9eb;
   }
 
-a:hover {
-  text-decoration: underline;
-}
-
 .col-md-4 {
   text-align: center;
 }
 
-img {
-  padding: 2px;
-  border: 1px dotted #273449;
-  background-color: #94d893;
+.highlight {
+  color: yellow;
 }
